# aetherquant

./: .gitignore  LICENSE  README.md  README.zh.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scripts/: sync-version.cjs
src/: App.vue  i18n.ts  main.ts  style.css  themes.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AnalysisPanel.vue  CoinSelector.vue  ExchangeSelector.vue  KlineChart.vue  RatingBadge.vue  TitleBar.vue  Toolbar.vue
src/composables/: useAnalysis.ts  useChart.ts  usePlugins.ts  useRealtime.ts  useTauri.ts  useTheme.ts
src/locales/: en.ts  zh.ts
src/plugin-system/: PluginManager.ts
src/plugins/data-sources/: hyperliquid-source.ts
src/plugins/exchanges/: hyperliquid.ts
src/plugins/strategies/: bollinger-strategy.ts  ema-strategy.ts  index.ts  ma-strategy.ts  macd-strategy.ts  rsi-strategy.ts
src/types/: data.ts  index.ts  plugin.ts
src/utils/: indicators.ts
