[package]
name = "aetherquant"
version = "1.0.0"
description = "AetherQuant — Cryptocurrency K-Line Quantitative Analysis Platform"
authors = ["oxroot"]
license = "MIT"
repository = "https://github.com/oxroot-crypto/aetherquant"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "aetherquant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
